WSC-1324 feat: send meeting stop event to users in waiting list (#42)
* feat: send meeting stop event to users in waiting list